[gd_scene load_steps=12 format=4 uid="uid://gjqkcvdgoup1"]

[ext_resource type="PackedScene" uid="uid://bviqdl6dsj02q" path="res://objects/stand/stand.tscn" id="1_hyk8p"]
[ext_resource type="Script" uid="uid://ck0bnjhevnac2" path="res://scenes/main/main.gd" id="1_k2fmo"]
[ext_resource type="Texture2D" uid="uid://dmj32a11off65" path="res://assets/images/backgrounds/sand_ground.png" id="2_6q06x"]
[ext_resource type="AudioStream" uid="uid://b65qlwy3kunkn" path="res://assets/sfx/mixkit-coins-handling-1939.wav" id="3_l3cfh"]
[ext_resource type="PackedScene" uid="uid://cl7f0axpvoqkr" path="res://scenes/hud/hud.tscn" id="4_ow5a4"]
[ext_resource type="Texture2D" uid="uid://ceox3xtqfuu1x" path="res://assets/images/backgrounds/terrain.png" id="4_yyfjg"]
[ext_resource type="AudioStream" uid="uid://dfbkcnmtxu4xm" path="res://assets/sfx/cute.mp3" id="6_ow5a4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b1x3f"]
texture = ExtResource("4_yyfjg")
texture_region_size = Vector2i(32, 32)
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
8:15/0 = 0
7:15/0 = 0
6:15/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
10:22/0 = 0
11:22/0 = 0
19:20/0 = 0
19:19/0 = 0
18:18/0 = 0
20:18/0 = 0
20:20/0 = 0
16:21/0 = 0
20:22/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
14:9/0 = 0
13:9/0 = 0
12:9/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0

[sub_resource type="TileSet" id="TileSet_b1x3f"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_b1x3f")

[sub_resource type="CircleShape2D" id="CircleShape2D_iuonh"]
radius = 34.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_hujxm"]
vertices = PackedVector2Array(291.102, 1148.45, 840.039, 1635.19, -269.047, 1651.92, -274.953, 1118.22, 7.50781, 1071.32, -205.773, 542, -200.281, 422.32, -192.398, 424.297, -98.9531, 542, 27.7266, 904.227, -146.062, 926.328, -148.938, 673.398, 21.6797, 652.203, 92.4922, 702.633, 286.25, 897.57, 491.172, 880.406, 499.828, 1142, 290.289, 971.148, 175, 967.859, 293.547, 1142, 165.594, 520.039, 448.938, 518.031, 446.047, 796, 228.547, 796, 183.328, 666.359, 401.523, -206.422, 660.297, -156.812, 702.617, 391.352, 301.023, 418.711, 285.992, 344.531, 244.977, 60.3828, 241.898, 271.148, 178.312, 247.594, 178.344, 356.492, 5.20312, 229.117, -0.8125, 74.6719, 161.461, 64.2969, 175, 667.781, 109.008, 613, -86.4297, 277.641, -81.4688, 227.102, -83.9531, 613, -183.289, 285.617)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 7, 8), PackedInt32Array(9, 10, 11, 12, 13), PackedInt32Array(14, 15, 16, 17), PackedInt32Array(18, 17, 16, 19, 4), PackedInt32Array(20, 21, 22, 23, 24), PackedInt32Array(25, 26, 27, 28, 29, 30), PackedInt32Array(31, 30, 29), PackedInt32Array(32, 31, 29, 33, 34), PackedInt32Array(34, 35, 36, 32), PackedInt32Array(20, 24, 37, 38), PackedInt32Array(8, 39, 40, 34, 33, 20, 38, 41), PackedInt32Array(19, 0, 4), PackedInt32Array(37, 18, 4, 9, 13), PackedInt32Array(37, 13, 38), PackedInt32Array(7, 42, 39, 8)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-274, 1657, 853, 1640, 297, 1147, 505, 1147, 496, 875, 281, 893, 285, 966, 180, 963, 180, 672, 225, 801, 451, 801, 454, 513, 171, 515, 183, 361, 282, 350, 297, 424, 708, 396, 665, -161, 399, -212, 240, 59, 237, 264, 183, 244, 166, 59, -6, 70, 0, 224, -86, 222, -91, 273, -188, 281, -197, 418, -205, 416, -211, 547, -103, 547, -88, 618, 103, 618, 89, 694, 23, 647, -154, 669, -151, 932, 22, 910, 3, 1067, -280, 1114)])
agent_radius = 5.0

[node name="Main" type="Node2D"]
script = ExtResource("1_k2fmo")

[node name="ColorRect" type="TextureRect" parent="."]
offset_right = 1096.0
offset_bottom = 1848.0
texture = ExtResource("2_6q06x")
stretch_mode = 1

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAIAAgABAAkAAAAAAAMAAgABAAkAAAAAAAQAAgAGAA4AAAAAAAUAAgAGAA8AAAAAAAYAAgAGABAAAAABAAEAAgABAAkAAAABAAQAAgAHAA4AAAABAAUAAgAHAA8AAAABAAYAAgAHABAAAAACAAEAAgABAAkAAAACAAIAAgABAAkAAAACAAMAAgABAAkAAAADAAEAAgABAAkAAAADAAIAAgABAAkAAAADAAMAAgABAAkAAAAEAAEAAgABAAkAAAAEAAIAAgABAAkAAAAEAAMAAgABAAkAAAAEAAYAAgABAAkAAAAFAAEAAgABAAkAAAAFAAIAAgABAAkAAAAFAAMAAgABAAkAAAAAAAkAAgABAAkAAAAAAAoAAgABAAkAAAAAAAsAAgABAAkAAAAAAAwAAgABAAkAAAAAAA0AAgABAAkAAAAAAA4AAgABAAkAAAAAABIAAgABAAkAAAAAABMAAgABAAkAAAAAABQAAgABAAkAAAAAABUAAgABAAkAAAAAABYAAgABAAkAAAABAAkAAgABAAkAAAABAAoAAgABAAkAAAABAAsAAgABAAkAAAABABIAAgABAAkAAAABABMAAgABAAkAAAABABQAAgABAAkAAAABABUAAgABAAkAAAABABYAAgABAAkAAAACAAoAAgABAAkAAAACAAsAAgABAAkAAAACAAwAAgABAAkAAAACABMAAgABAAkAAAACABQAAgABAAkAAAACABUAAgABAAkAAAACABYAAgABAAkAAAADAAoAAgABAAkAAAAEAAoAAgABAAkAAAAEAA4AAgABAAkAAAAGAAEAAgABAAkAAAAGAAIAAgABAAkAAAAGAAMAAgABAAkAAAAGAAQAAgABAAkAAAAHAAEAAgABAAkAAAAHAAIAAgABAAkAAAAHABUAAgABAAkAAAAIAAEAAgABAAkAAAAIAAIAAgABAAkAAAAIAAcAAgABAAkAAAAIABUAAgABAAkAAAAJAAEAAgABAAkAAAAJAAIAAgABAAkAAAAJAAMAAgABAAkAAAAJAAQAAgABAAkAAAAJAAcAAgABAAkAAAAJABQAAgACAAkAAAAJABUAAgACAAkAAAAKAAEAAgABAAkAAAAKAAIAAgABAAkAAAAKAAMAAgABAAkAAAAKAAQAAgABAAkAAAAKAAcAAgABAAkAAAALAAEAAgABAAkAAAALAAIAAgABAAkAAAALAAMAAgABAAkAAAALAAQAAgABAAkAAAALAAUAAgABAAkAAAALAAYAAgABAAkAAAALAAcAAgABAAkAAAAMAAEAAgABAAkAAAAMAAIAAgABAAkAAAAMAAMAAgABAAkAAAAMAAQAAgABAAkAAAAMAAUAAgABAAkAAAAMAAYAAgABAAkAAAAMAAcAAgABAAkAAAAMABYAAgAAAAkAAAANAAEAAgABAAkAAAANAAIAAgABAAkAAAANAAMAAgABAAkAAAANAAQAAgABAAkAAAANAAUAAgABAAkAAAANAAYAAgABAAkAAAANAAcAAgACAAkAAAANAAwAAgAAAAgAAAANAA0AAgAAAAkAAAANAA8AAgAAAAkAAAANABAAAgAAAAkAAAANABEAAgAAAAkAAAANABIAAgAAAAoAAAD//xIAAgABAAkAAAD//xMAAgABAAkAAAD//xQAAgABAAkAAAD//xUAAgABAAkAAAD//xYAAgABAAkAAAD//xcAAgABAAkAAAD//xgAAgABAAkAAAD//xkAAgABAAkAAAD//xoAAgABAAkAAAD//xsAAgABAAkAAAD//xwAAgABAAkAAAAAABcAAgABAAkAAAAAABgAAgABAAkAAAAAABkAAgABAAkAAAAAABoAAgABAAkAAAAAABsAAgABAAkAAAAAABwAAgABAAkAAAABABcAAgABAAkAAAABABgAAgABAAkAAAABABkAAgABAAkAAAABABoAAgABAAkAAAABABsAAgABAAkAAAABABwAAgACAAkAAAACABcAAgABAAkAAAACABgAAgABAAkAAAACABkAAgABAAkAAAACABoAAgABAAkAAAACABsAAgACAAoAAAADABoAAgABAAkAAAAEABoAAgABAAkAAAAFABoAAgABAAkAAAAGABoAAgABAAkAAAAIABwAAgAAAAkAAAAJABwAAgACAAkAAAAMABcAAgAAAAgAAAAMABgAAgAAAAkAAAAMABkAAgAAAAkAAAAMABoAAgAAAAkAAAAMABsAAgAAAAkAAAAMABwAAgAAAAkAAAANABgAAgABAAkAAAANABkAAgABAAkAAAANABoAAgABAAkAAAANABsAAgABAAkAAAANABwAAgABAAkAAAAOABEAAgACAAkAAAAOABIAAgACAAoAAAAOABgAAgABAAkAAAAOABkAAgABAAkAAAAOABoAAgABAAkAAAAOABsAAgABAAkAAAAOABwAAgABAAkAAAAPABgAAgABAAkAAAAPABkAAgABAAkAAAAPABoAAgABAAkAAAAPABsAAgABAAkAAAAPABwAAgABAAkAAAAQABIAAgABAAkAAAAQABMAAgABAAkAAAAQABgAAgABAAkAAAAQABkAAgABAAkAAAAQABoAAgABAAkAAAAQABsAAgABAAkAAAAQABwAAgABAAkAAAADAAsAAgABAAkAAAAOAAEAAgABAAkAAAAOAAIAAgABAAkAAAAOAAMAAgABAAkAAAAOAAQAAgABAAkAAAAOAAUAAgACAAkAAAAOAAYAAgACAAkAAAAOAA4AAgABAAkAAAAOABAAAgACAAkAAAAOAA0AAgABAAkAAAAOAAwAAgABAAgAAAD+/wEAAgABAAkAAAD+/wIAAgABAAkAAAD+/wMAAgABAAkAAAD+/wQAAgABAAkAAAD+/wUAAgABAAkAAAD+/wYAAgABAAkAAAD+/wcAAgABAAkAAAD+/wgAAgABAAkAAAD+/wkAAgABAAkAAAD+/woAAgABAAkAAAD+/wsAAgABAAkAAAD+/wwAAgABAAkAAAD+/w0AAgABAAkAAAD+/w4AAgABAAkAAAD+/w8AAgABAAkAAAD+/xEAAgABAAkAAAD+/xIAAgABAAkAAAD+/xMAAgABAAkAAAD+/xQAAgABAAkAAAD+/xUAAgABAAkAAAD+/xYAAgABAAkAAAD+/xcAAgABAAkAAAD+/xgAAgABAAkAAAD+/xkAAgABAAkAAAD+/xoAAgABAAkAAAD+/xsAAgABAAkAAAD+/xwAAgABAAkAAAD+/x0AAgABAAkAAAD+/x4AAgABAAkAAAD+/x8AAgABAAkAAAD+/yAAAgABAAkAAAD+/yEAAgABAAkAAAD+/yIAAgABAAkAAAD+/yMAAgABAAkAAAD+/yQAAgABAAkAAAD+/yUAAgAGAA4AAAD+/yYAAgAGAA8AAAD+/ycAAgAGABAAAAD+/ygAAgABAAkAAAD+/ykAAgABAAoAAAD//wEAAgABAAkAAAD//wIAAgABAAkAAAD//wMAAgABAAkAAAD//wQAAgABAAkAAAD//wUAAgABAAkAAAD//wYAAgABAAkAAAD//wcAAgABAAkAAAD//wgAAgABAAkAAAD//wkAAgABAAkAAAD//woAAgABAAkAAAD//wsAAgABAAkAAAD//wwAAgABAAkAAAD//w0AAgABAAkAAAD//w4AAgABAAkAAAD//w8AAgABAAkAAAD//x0AAgABAAkAAAD//x4AAgABAAkAAAD//x8AAgABAAkAAAD//yAAAgABAAkAAAD//yEAAgABAAkAAAD//yIAAgABAAkAAAD//yMAAgABAAkAAAD//yQAAgABAAkAAAD//yUAAgAHAA4AAAD//yYAAgAHAA8AAAD//ycAAgAHABAAAAD//ygAAgABAAkAAAD//ykAAgABAAoAAAAAAAEAAgABAAkAAAAAAAcAAgABAAkAAAAAAAgAAgABAAkAAAAAAB0AAgABAAkAAAAAAB4AAgABAAkAAAAAAB8AAgABAAkAAAAAACAAAgABAAkAAAAAACEAAgABAAkAAAAAACIAAgABAAkAAAAAACMAAgABAAkAAAAAACQAAgABAAkAAAAAACUAAgAIAA4AAAAAACYAAgAIAA8AAAAAACcAAgAIABAAAAAAACgAAgABAAkAAAAAACkAAgABAAoAAAABAAIAAgABAAkAAAABAAMAAgABAAkAAAABAAcAAgABAAkAAAABAAgAAgABAAkAAAABAAwAAgABAAkAAAABAA0AAgABAAkAAAABAA4AAgABAAkAAAABAB0AAgACAAkAAAABAB4AAgACAAkAAAABAB8AAgACAAkAAAABACAAAgACAAkAAAABACEAAgACAAkAAAABACIAAgACAAkAAAABACMAAgABAAkAAAABACQAAgABAAkAAAABACUAAgABAAkAAAABACYAAgABAAkAAAABACcAAgABAAkAAAABACgAAgABAAkAAAABACkAAgABAAoAAAACAAQAAgAIAA4AAAACAAUAAgAIAA8AAAACAAYAAgAIABAAAAACAAcAAgABAAkAAAACAAgAAgABAAkAAAACAAkAAgABAAkAAAACAA0AAgABAAkAAAACAA4AAgABAAkAAAACAB0AAgAAAAgAAAACAB4AAgAAAAkAAAACAB8AAgAAAAkAAAACACAAAgAAAAkAAAACACEAAgAAAAkAAAACACIAAgAAAAoAAAACACMAAgABAAgAAAACACQAAgABAAkAAAACACUAAgABAAkAAAACACYAAgABAAkAAAACACcAAgABAAkAAAACACgAAgABAAkAAAACACkAAgABAAoAAAADAAQAAgABAAkAAAADAAUAAgABAAkAAAADAAYAAgABAAkAAAADAAcAAgABAAkAAAADAAgAAgACAAkAAAADAAkAAgACAAkAAAADAAwAAgABAAkAAAADAA0AAgABAAkAAAADAA4AAgABAAkAAAADABMAAgABAAkAAAADABQAAgABAAkAAAADABUAAgABAAkAAAADABYAAgABAAkAAAADABcAAgABAAkAAAADABgAAgABAAkAAAADABkAAgABAAkAAAADAB0AAgABAAgAAAADAB4AAgABAAkAAAADAB8AAgABAAkAAAADACAAAgABAAkAAAADACEAAgABAAkAAAADACIAAgABAAoAAAADACMAAgACAAgAAAADACQAAgACAAkAAAADACUAAgACAAkAAAADACYAAgACAAkAAAADACcAAgACAAkAAAADACgAAgACAAkAAAADACkAAgAAAAgAAAADACoAAgAAAAkAAAAEAAQAAgABAAkAAAAEAAUAAgABAAkAAAAEAAcAAgABAAkAAAAEAA0AAgABAAkAAAAEABQAAgABAAkAAAAEABUAAgABAAkAAAAEABYAAgABAAkAAAAEABcAAgABAAkAAAAEABgAAgABAAkAAAAEABkAAgABAAkAAAAEAB0AAgABAAgAAAAEAB4AAgABAAkAAAAEAB8AAgAGAA4AAAAEACAAAgAGAA8AAAAEACEAAgAGABAAAAAEACkAAgABAAgAAAAEACoAAgABAAkAAAAFAAQAAgABAAkAAAAFAAUAAgABAAkAAAAFAAYAAgACAAkAAAAFAAcAAgACAAkAAAAFABQAAgABAAkAAAAFABUAAgABAAkAAAAFABYAAgABAAkAAAAFABcAAgABAAkAAAAFABgAAgABAAkAAAAFABkAAgABAAkAAAAFAB0AAgABAAgAAAAFAB4AAgABAAkAAAAFAB8AAgAHAA4AAAAFACAAAgAHAA8AAAAFACEAAgAHABAAAAAFACIAAgABAAoAAAAFACkAAgABAAgAAAAFACoAAgABAAkAAAAGAAUAAgABAAkAAAAGABQAAgABAAkAAAAGABUAAgABAAkAAAAGABYAAgABAAkAAAAGABcAAgABAAkAAAAGABgAAgABAAkAAAAGABkAAgABAAkAAAAGAB0AAgABAAgAAAAGAB4AAgABAAkAAAAGAB8AAgAIAA4AAAAGACAAAgAIAA8AAAAGACEAAgAIABAAAAAGACIAAgABAAoAAAAGACkAAgABAAgAAAAGACoAAgABAAkAAAAHAAMAAgABAAkAAAAHAAQAAgABAAkAAAAHAAUAAgABAAkAAAAHAB0AAgACAAgAAAAHAB4AAgACAAkAAAAHAB8AAgACAAkAAAAHACAAAgACAAkAAAAHACEAAgACAAkAAAAHACkAAgABAAgAAAAHACoAAgABAAkAAAAIAAMAAgABAAkAAAAIAAQAAgABAAkAAAAIAAUAAgABAAkAAAAIAAYAAgABAAkAAAAIAB0AAgAAAAkAAAAIAB4AAgAAAAkAAAAIAB8AAgAAAAkAAAAIACAAAgAAAAkAAAAIACEAAgAAAAkAAAAIACkAAgABAAgAAAAIACoAAgABAAkAAAAJAAUAAgABAAkAAAAJAAYAAgABAAkAAAAJAB0AAgACAAkAAAAJAB4AAgACAAkAAAAJAB8AAgACAAkAAAAJACAAAgACAAkAAAAJACEAAgACAAkAAAAJACkAAgABAAgAAAAJACoAAgABAAkAAAAKAAUAAgABAAkAAAAKAAYAAgABAAkAAAAKACkAAgABAAgAAAAKACoAAgABAAkAAAALACkAAgABAAgAAAALACoAAgABAAkAAAAMAB0AAgAAAAkAAAAMAB4AAgAAAAkAAAAMACkAAgABAAgAAAAMACoAAgABAAkAAAANAA4AAgAAAAkAAAANAB0AAgABAAkAAAANAB4AAgABAAkAAAANACkAAgABAAgAAAANACoAAgABAAkAAAAOAA8AAgABAAkAAAAOAB0AAgABAAkAAAAOAB4AAgABAAkAAAAOACkAAgACAAgAAAAOACoAAgACAAkAAAAPAAEAAgABAAkAAAAPAAIAAgABAAkAAAAPAAMAAgACAAkAAAAPAAQAAgACAAkAAAAPAAwAAgABAAgAAAAPAA0AAgABAAkAAAAPAA4AAgABAAkAAAAPAA8AAgABAAkAAAAPAB0AAgACAAkAAAAPAB4AAgACAAkAAAAPAB8AAgACAAoAAAAPACQAAgAAAAgAAAAPACUAAgAAAAkAAAAPACYAAgAAAAkAAAAPACcAAgAAAAkAAAAPACgAAgAAAAkAAAAPACkAAgAAAAoAAAAQAAEAAgABAAkAAAAQAAIAAgABAAkAAAAQAAcAAgAAAAkAAAAQAAwAAgABAAgAAAAQAA0AAgABAAkAAAAQAA4AAgABAAkAAAAQAA8AAgABAAkAAAAQACQAAgABAAgAAAAQACUAAgABAAkAAAAQACYAAgABAAkAAAAQACcAAgABAAkAAAAQACgAAgABAAkAAAAQACkAAgABAAoAAAARAAEAAgABAAkAAAARAAIAAgABAAkAAAARAAUAAgAAAAkAAAARAAYAAgABAAkAAAARAAcAAgABAAkAAAARAAgAAgABAAkAAAARAAkAAgABAAkAAAARAAoAAgABAAkAAAARAA0AAgABAAkAAAARAA4AAgABAAkAAAARAA8AAgABAAkAAAARABAAAgABAAkAAAARABEAAgABAAkAAAARABIAAgABAAkAAAARABMAAgABAAkAAAARABQAAgABAAkAAAARABUAAgABAAkAAAARABgAAgABAAkAAAARABkAAgABAAkAAAARABoAAgABAAkAAAARABsAAgABAAkAAAARABwAAgABAAkAAAARACAAAgABAAkAAAARACQAAgABAAgAAAARACUAAgABAAkAAAARACYAAgABAAkAAAARACcAAgABAAkAAAARACgAAgABAAkAAAARACkAAgABAAoAAAASAAQAAgAAAAkAAAASAAUAAgABAAkAAAASAAYAAgABAAkAAAASAAcAAgABAAkAAAASAAgAAgABAAkAAAASAAkAAgABAAkAAAASAAoAAgABAAkAAAASAA0AAgABAAkAAAASAA4AAgABAAkAAAASAA8AAgABAAkAAAASABAAAgABAAkAAAASABEAAgABAAkAAAASABIAAgABAAkAAAASABMAAgABAAkAAAASABQAAgABAAkAAAASABUAAgABAAkAAAASABgAAgABAAkAAAASABkAAgABAAkAAAASABoAAgABAAkAAAASABsAAgABAAkAAAASABwAAgABAAkAAAASAB0AAgABAAkAAAASAB4AAgABAAkAAAASAB8AAgABAAkAAAASACAAAgABAAkAAAASACEAAgABAAkAAAASACQAAgABAAgAAAASACUAAgABAAkAAAASACYAAgABAAkAAAASACcAAgABAAkAAAASACgAAgABAAkAAAASACkAAgABAAoAAAATAAIAAgABAAkAAAATAAMAAgAAAAkAAAATAAQAAgABAAkAAAATAAUAAgABAAkAAAATAAYAAgABAAkAAAATAAcAAgABAAkAAAATAAgAAgABAAkAAAATAAkAAgABAAkAAAATAAoAAgABAAkAAAATAA0AAgABAAkAAAATAA4AAgAGAA4AAAATAA8AAgAGAA8AAAATABAAAgAGABAAAAATABEAAgABAAkAAAATABIAAgABAAkAAAATABMAAgABAAkAAAATABQAAgABAAkAAAATABUAAgABAAkAAAATABgAAgABAAkAAAATABkAAgABAAkAAAATABoAAgABAAkAAAATABsAAgABAAkAAAATABwAAgABAAkAAAATAB0AAgABAAkAAAATAB4AAgABAAkAAAATAB8AAgABAAkAAAATACAAAgABAAkAAAATACEAAgABAAkAAAATACQAAgABAAgAAAATACUAAgABAAkAAAATACYAAgABAAkAAAATACcAAgABAAkAAAATACgAAgABAAkAAAATACkAAgABAAoAAAAUAAEAAgABAAkAAAAUAAIAAgABAAkAAAAUAAMAAgABAAkAAAAUAAQAAgABAAkAAAAUAAUAAgABAAkAAAAUAAYAAgABAAkAAAAUAAcAAgABAAkAAAAUAAgAAgABAAkAAAAUAAkAAgABAAkAAAAUAAoAAgABAAkAAAAUAA0AAgABAAkAAAAUAA4AAgAHAA4AAAAUAA8AAgAHAA8AAAAUABAAAgAHABAAAAAUABEAAgABAAkAAAAUABIAAgABAAkAAAAUABgAAgABAAkAAAAUABkAAgABAAkAAAAUABoAAgABAAkAAAAUABsAAgABAAkAAAAUABwAAgABAAkAAAAUAB0AAgABAAkAAAAUAB4AAgABAAkAAAAUAB8AAgABAAkAAAAUACAAAgABAAkAAAAUACEAAgABAAkAAAAUACQAAgABAAgAAAAUACUAAgABAAkAAAAUACYAAgAGAA4AAAAUACcAAgAGAA8AAAAUACgAAgAGABAAAAAUACkAAgABAAoAAAAVAAEAAgABAAkAAAAVAAIAAgABAAkAAAAVAAMAAgABAAkAAAAVAAQAAgABAAkAAAAVAAUAAgABAAkAAAAVAAYAAgABAAkAAAAVAAcAAgABAAkAAAAVAAgAAgABAAkAAAAVAAkAAgABAAkAAAAVAA0AAgABAAkAAAAVAA4AAgAIAA4AAAAVAA8AAgAIAA8AAAAVABAAAgAIABAAAAAVABEAAgABAAkAAAAVABIAAgABAAkAAAAVABMAAgABAAkAAAAVABQAAgABAAkAAAAVABUAAgABAAkAAAAVABYAAgABAAkAAAAVABcAAgABAAkAAAAVABgAAgABAAkAAAAVABkAAgABAAkAAAAVABoAAgABAAkAAAAVABsAAgABAAkAAAAVABwAAgABAAkAAAAVAB0AAgABAAkAAAAVAB4AAgABAAkAAAAVAB8AAgABAAkAAAAVACAAAgABAAkAAAAVACEAAgABAAkAAAAVACQAAgABAAkAAAAVACUAAgABAAkAAAAVACYAAgAHAA4AAAAVACcAAgAHAA8AAAAVACgAAgAHABAAAAAVACkAAgABAAoAAAAWAAEAAgABAAkAAAAWAAIAAgABAAkAAAAWAAMAAgABAAkAAAAWAAQAAgABAAkAAAAWAAUAAgABAAkAAAAWAAYAAgABAAkAAAAWAAcAAgABAAkAAAAWAAgAAgABAAkAAAAWAAkAAgABAAkAAAAWAAoAAgABAAkAAAAWAAsAAgABAAkAAAAWAAwAAgABAAkAAAAWAA0AAgABAAkAAAAWAA4AAgABAAkAAAAWAA8AAgABAAkAAAAWABAAAgABAAkAAAAWABEAAgABAAkAAAAWABIAAgABAAkAAAAWABMAAgABAAkAAAAWABQAAgABAAkAAAAWABUAAgABAAkAAAAWABYAAgABAAkAAAAWABcAAgABAAkAAAAWABgAAgABAAkAAAAWABkAAgABAAkAAAAWABoAAgABAAkAAAAWABsAAgABAAkAAAAWABwAAgABAAkAAAAWAB0AAgABAAkAAAAWAB4AAgABAAkAAAAWACIAAgABAAkAAAAWACMAAgABAAkAAAAWACQAAgABAAkAAAAWACUAAgABAAkAAAAWACYAAgAIAA4AAAAWACcAAgAIAA8AAAAWACgAAgAIABAAAAAWACkAAgABAAoAAAAXAAEAAgABAAkAAAAXAAIAAgABAAkAAAAXAAMAAgABAAkAAAAXAAQAAgABAAkAAAAXAAUAAgABAAkAAAAXAAYAAgABAAkAAAAXAAcAAgABAAkAAAAXAAgAAgABAAkAAAAXAAkAAgABAAkAAAAXAAoAAgABAAkAAAAXAAsAAgABAAkAAAAXAAwAAgABAAkAAAAXAA0AAgABAAkAAAAXAA4AAgABAAkAAAAXAA8AAgABAAkAAAAXABAAAgABAAkAAAAXABEAAgABAAkAAAAXABIAAgABAAkAAAAXABMAAgABAAkAAAAXABQAAgABAAkAAAAXABUAAgABAAkAAAAXABYAAgABAAkAAAAXABcAAgABAAkAAAAXABgAAgABAAkAAAAXABkAAgABAAkAAAAXABoAAgABAAkAAAAXABsAAgABAAkAAAAXABwAAgABAAkAAAAXAB0AAgABAAkAAAAXAB4AAgABAAkAAAAXAB8AAgABAAkAAAAXACAAAgABAAkAAAAXACEAAgABAAkAAAAXACIAAgABAAkAAAAXACMAAgABAAkAAAAXACQAAgABAAkAAAAXACUAAgABAAkAAAAXACYAAgABAAkAAAAXACcAAgABAAkAAAAXACgAAgABAAkAAAAXACkAAgABAAoAAAD//xAAAgABAAkAAAD//xEAAgABAAkAAAD+/xAAAgABAAkAAAAWAB8AAgABAAkAAAAWACAAAgABAAkAAAAWACEAAgABAAkAAAAVACIAAgABAAkAAAAVACMAAgAAAAkAAAAQAAYAAgALABYAAAAAAA8AAgACAAkAAAAAABAAAgACAAkAAAAAABEAAgACAAkAAAACABIAAgABAAkAAAAEABMAAgABAAkAAAAHABQAAgABAAgAAAABABEAAgABAAgAAAADABIAAgABAAkAAAAGABMAAgABAAkAAAAFABMAAgABAAkAAAAIABMAAgACAAkAAAAIABsAAgAAAAgAAAAJACIAAgACAAoAAAADABsAAgACAAoAAAAJABYAAgACAAoAAAANABcAAgABAAgAAAAOABcAAgABAAgAAAAPABcAAgABAAgAAAAQABcAAgABAAgAAAARABcAAgABAAgAAAASABcAAgABAAgAAAATABcAAgABAAgAAAAUABcAAgABAAgAAAAUABMAAgABAAkAAAAUABQAAgABAAkAAAAUABUAAgABAAkAAAAUABYAAgABAAkAAAATABYAAgABAAkAAAAPABAAAgABAAoAAAAQABAAAgAAAAkAAAAQABEAAgAAAAkAAAANAB8AAgABAAoAAAAOAB8AAgABAAoAAAAMAB8AAgAAAAoAAAAIACIAAgAAAAoAAAAHACIAAgACAAoAAAAJABsAAgACAAgAAAAEACIAAgABAAoAAAAHABMAAgABAAkAAAAHABIAAgABAAkAAAAGABIAAgABAAkAAAAFABIAAgABAAkAAAAEABIAAgABAAkAAAACABEAAgABAAgAAAADABEAAgABAAgAAAAEABEAAgABAAgAAAAFABEAAgABAAgAAAAGABEAAgABAAgAAAAHABEAAgABAAgAAAAIABEAAgACAAgAAAAIABIAAgACAAkAAAAIABQAAgABAAgAAAAJAAsAAgASABIAAAAIAA8AAgASABIAAAAJAA8AAgASABIAAAAKAA8AAgASABIAAAAQACIAAgASABIAAAAPACMAAgASABIAAAANACUAAgASABIAAAAKACYAAgASABIAAAAIACUAAgASABIAAAAGACUAAgASABIAAAAMACEAAgAQABUAAAADABwAAgAQABUAAAAFACQAAgALABYAAAAOAAcAAgALABYAAAAkAP//AgALABYAAAAkAAAAAgALABYAAAAEABwAAgAKABYAAAAFABwAAgAKABYAAAAGABwAAgAKABYAAAARAAwAAgABAAgAAAASAAwAAgABAAgAAAATAAwAAgABAAgAAAAUAAwAAgABAAgAAAAVAAwAAgABAAgAAAANAAgAAgACAAoAAAAMAAgAAgABAAoAAAALAAgAAgABAAoAAAAGAAgAAgALABYAAAAHAAgAAgAAAAoAAAAHAAYAAgAAAAkAAAAHAAcAAgAAAAkAAAAFAAgAAgACAAoAAAAEAAgAAgABAAoAAAAVAAoAAgAAAAkAAAAVAAsAAgAAAAkAAAAEACwAAgABAAoAAAAFACwAAgABAAoAAAAGACwAAgABAAoAAAAHACwAAgABAAoAAAAIACwAAgABAAoAAAAJACwAAgABAAoAAAAKACwAAgABAAoAAAALACwAAgABAAoAAAAMACwAAgABAAoAAAANACwAAgABAAoAAAAOACwAAgACAAoAAAAOACsAAgACAAkAAAADACwAAgAAAAoAAAADACsAAgAAAAkAAAAEACsAAgABAAkAAAAFACsAAgABAAkAAAAGACsAAgABAAkAAAAHACsAAgABAAkAAAAIACsAAgABAAkAAAAJACsAAgABAAkAAAAKACsAAgABAAkAAAALACsAAgABAAkAAAAMACsAAgABAAkAAAANACsAAgABAAkAAAD9//v/AgABAAkAAAD9//z/AgABAAkAAAD9//3/AgABAAkAAAD9//7/AgABAAkAAAD9////AgABAAkAAAD9/wAAAgABAAkAAAD9/wEAAgABAAkAAAD+//v/AgABAAkAAAD+//z/AgABAAkAAAD+//3/AgABAAkAAAD+//7/AgABAAkAAAD+////AgABAAkAAAD+/wAAAgABAAkAAAD///v/AgABAAkAAAD///z/AgABAAkAAAD///3/AgABAAkAAAD///7/AgABAAkAAAD/////AgABAAkAAAD//wAAAgABAAkAAAAAAPv/AgABAAkAAAAAAPz/AgABAAkAAAAAAP3/AgABAAkAAAAAAP7/AgABAAkAAAAAAP//AgABAAkAAAAAAAAAAgABAAkAAAABAPv/AgABAAkAAAABAPz/AgABAAkAAAABAP3/AgABAAkAAAABAP7/AgABAAkAAAABAP//AgABAAkAAAABAAAAAgABAAkAAAACAPv/AgABAAkAAAACAPz/AgABAAkAAAACAP3/AgABAAkAAAACAP7/AgABAAkAAAACAP//AgABAAkAAAACAAAAAgABAAkAAAADAPv/AgABAAkAAAADAPz/AgABAAkAAAADAP3/AgABAAkAAAADAP7/AgABAAkAAAADAP//AgABAAkAAAADAAAAAgABAAkAAAAEAPv/AgABAAkAAAAEAPz/AgABAAkAAAAEAP3/AgABAAkAAAAEAP7/AgABAAkAAAAEAP//AgABAAkAAAAEAAAAAgABAAkAAAAFAPv/AgABAAkAAAAFAPz/AgABAAkAAAAFAP3/AgABAAkAAAAFAP7/AgABAAkAAAAFAP//AgABAAkAAAAFAAAAAgABAAkAAAAGAPv/AgABAAkAAAAGAPz/AgABAAkAAAAGAP3/AgABAAkAAAAGAP7/AgABAAkAAAAGAP//AgABAAkAAAAGAAAAAgABAAkAAAAHAPv/AgABAAkAAAAHAPz/AgABAAkAAAAHAP3/AgABAAkAAAAHAP7/AgABAAkAAAAHAP//AgABAAkAAAAHAAAAAgABAAkAAAAIAPv/AgABAAkAAAAIAPz/AgABAAkAAAAIAP3/AgABAAkAAAAIAP7/AgABAAkAAAAIAP//AgABAAkAAAAIAAAAAgABAAkAAAAJAPv/AgABAAkAAAAJAPz/AgABAAkAAAAJAP3/AgABAAkAAAAJAP7/AgABAAkAAAAJAP//AgABAAkAAAAJAAAAAgABAAkAAAAKAPv/AgABAAkAAAAKAPz/AgABAAkAAAAKAP3/AgABAAkAAAAKAP7/AgABAAkAAAAKAP//AgABAAkAAAAKAAAAAgABAAkAAAALAPv/AgABAAkAAAALAPz/AgABAAkAAAALAP3/AgABAAkAAAALAP7/AgABAAkAAAALAP//AgABAAkAAAALAAAAAgABAAkAAAAMAPv/AgABAAkAAAAMAPz/AgABAAkAAAAMAP3/AgABAAkAAAAMAP7/AgABAAkAAAAMAP//AgABAAkAAAAMAAAAAgABAAkAAAANAPv/AgABAAkAAAANAPz/AgABAAkAAAANAP3/AgABAAkAAAANAP7/AgABAAkAAAANAP//AgABAAkAAAANAAAAAgABAAkAAAAOAPv/AgABAAkAAAAOAPz/AgABAAkAAAAOAP3/AgABAAkAAAAOAP7/AgABAAkAAAAOAP//AgABAAkAAAAOAAAAAgABAAkAAAAPAPv/AgABAAkAAAAPAPz/AgABAAkAAAAPAP3/AgABAAkAAAAPAP7/AgABAAkAAAAPAP//AgABAAkAAAAPAAAAAgABAAkAAAAQAPv/AgABAAkAAAAQAPz/AgABAAkAAAAQAP3/AgABAAkAAAAQAP7/AgABAAkAAAAQAP//AgABAAkAAAAQAAAAAgABAAkAAAARAPv/AgABAAkAAAARAPz/AgABAAkAAAARAP3/AgABAAkAAAARAP7/AgABAAkAAAARAP//AgABAAkAAAARAAAAAgABAAkAAAASAPv/AgABAAkAAAASAPz/AgABAAkAAAASAP3/AgABAAkAAAASAP7/AgABAAkAAAASAP//AgABAAkAAAASAAAAAgABAAkAAAASAAEAAgABAAkAAAATAPv/AgABAAkAAAATAPz/AgABAAkAAAATAP3/AgABAAkAAAATAP7/AgABAAkAAAATAP//AgABAAkAAAATAAAAAgABAAkAAAATAAEAAgABAAkAAAAUAPv/AgABAAkAAAAUAPz/AgABAAkAAAAUAP3/AgABAAkAAAAUAP7/AgABAAkAAAAUAP//AgABAAkAAAAUAAAAAgABAAkAAAAVAPv/AgABAAkAAAAVAPz/AgABAAkAAAAVAP3/AgABAAkAAAAVAP7/AgABAAkAAAAVAP//AgABAAkAAAAVAAAAAgABAAkAAAAWAPv/AgABAAkAAAAWAPz/AgABAAkAAAAWAP3/AgABAAkAAAAWAP7/AgABAAkAAAAWAP//AgABAAkAAAAWAAAAAgABAAkAAAAXAPv/AgABAAkAAAAXAPz/AgABAAkAAAAXAP3/AgABAAkAAAAXAP7/AgABAAkAAAAXAP//AgABAAkAAAAXAAAAAgABAAkAAAA=")
tile_set = SubResource("TileSet_b1x3f")

[node name="EntryPoint" type="Marker2D" parent="."]
position = Vector2(319, 1578)

[node name="ExitPoint" type="Marker2D" parent="."]
position = Vector2(681, -120)

[node name="Area2D" type="Area2D" parent="ExitPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitPoint/Area2D"]
shape = SubResource("CircleShape2D_iuonh")

[node name="Stands" type="Node2D" parent="."]

[node name="Stand" parent="Stands" instance=ExtResource("1_hyk8p")]
position = Vector2(280, 168)
scale = Vector2(0.5, 0.5)

[node name="Stand2" parent="Stands" instance=ExtResource("1_hyk8p")]
position = Vector2(552, 624)
scale = Vector2(0.5, 0.5)

[node name="Stand3" parent="Stands" instance=ExtResource("1_hyk8p")]
position = Vector2(136, 768)
scale = Vector2(0.5, 0.5)

[node name="Stand4" parent="Stands" instance=ExtResource("1_hyk8p")]
position = Vector2(82, 382)
scale = Vector2(0.5, 0.5)

[node name="Stand5" parent="Stands" instance=ExtResource("1_hyk8p")]
position = Vector2(592, 992)
scale = Vector2(0.5, 0.5)

[node name="Stand6" parent="Stands" instance=ExtResource("1_hyk8p")]
position = Vector2(576, 248)
scale = Vector2(0.5, 0.5)

[node name="HUD" parent="." instance=ExtResource("4_ow5a4")]

[node name="ClientsTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_l3cfh")
volume_db = 10.0

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ow5a4")
volume_db = -15.0
autoplay = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
position = Vector2(212, 30)
navigation_polygon = SubResource("NavigationPolygon_hujxm")

[node name="FlyingCoins" type="Node2D" parent="."]
scale = Vector2(0.2, 0.2)

[connection signal="body_entered" from="ExitPoint/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ClientsTimer" to="." method="_on_clients_timer_timeout"]
[connection signal="finished" from="BgMusic" to="." method="_on_bg_music_finished"]
